// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button deve adicionar um hint custom automaticamente 1`] = `
<span
  class="hint-wrapper"
>
  <button
    class="button_10cza06"
    type="button"
  >
    <span>
      Botão
    </span>
  </button>
</span>
`;

exports[`Button deve adicionar um hint string automaticamente 1`] = `
<span
  class="hint-wrapper"
>
  <button
    class="button_10cza06"
    type="button"
  >
    <span>
      Botão
    </span>
  </button>
</span>
`;

exports[`Button deve renderizar corretamente 1`] = `
<button
  class="button_10cza06"
  type="button"
>
  <span>
    Botão
  </span>
</button>
`;

exports[`Button deve ter animação de "carregando" ao especificar onClick com retorno do tipo Promise 1`] = `
<Button
  label="Botão"
  onClick={[Function]}
>
  <Button
    createStyles={[Function]}
    label="Botão"
    onClick={[Function]}
  >
    <Button
      createStyles={[Function]}
      label="Botão"
      onClick={[Function]}
      type="normal"
    >
      <button
        className="button_10cza06"
        onClick={[Function]}
        onKeyPress={[Function]}
        type="button"
      >
        <span>
          Botão
        </span>
      </button>
    </Button>
  </Button>
</Button>
`;

exports[`Button deve ter animação de "carregando" ao especificar onClick com retorno do tipo Promise 2`] = `
<Button
  label="Botão"
  onClick={[Function]}
>
  <Button
    createStyles={[Function]}
    label="Botão"
    onClick={[Function]}
  >
    <Button
      createStyles={[Function]}
      label="Botão"
      onClick={[Function]}
      type="normal"
    >
      <button
        className="button_10cza06-o_O-loading_3hmsj"
        onClick={[Function]}
        onKeyPress={[Function]}
        type="button"
      >
        <span>
          Botão
        </span>
      </button>
    </Button>
  </Button>
</Button>
`;

exports[`Button não deve ter animação com "onClick" que não seja promise 1`] = `
<Button
  label="Botão"
  onClick={[Function]}
>
  <Button
    createStyles={[Function]}
    label="Botão"
    onClick={[Function]}
  >
    <Button
      createStyles={[Function]}
      label="Botão"
      onClick={[Function]}
      type="normal"
    >
      <button
        className="button_10cza06"
        onClick={[Function]}
        onKeyPress={[Function]}
        type="button"
      >
        <span>
          Botão
        </span>
      </button>
    </Button>
  </Button>
</Button>
`;

exports[`Button não deve ter animação com "onClick" que não seja promise 2`] = `
<Button
  label="Botão"
  onClick={[Function]}
>
  <Button
    createStyles={[Function]}
    label="Botão"
    onClick={[Function]}
  >
    <Button
      createStyles={[Function]}
      label="Botão"
      onClick={[Function]}
      type="normal"
    >
      <button
        className="button_10cza06"
        onClick={[Function]}
        onKeyPress={[Function]}
        type="button"
      >
        <span>
          Botão
        </span>
      </button>
    </Button>
  </Button>
</Button>
`;
